fix(popup) Distorted loading gif
Long file names resulted in a skewed image. Now truncates.

--- a/css/index.css
+++ b/css/index.css
@@ -300,6 +300,12 @@ h2 {
   font-style: italic;
 }
 
+.truncate {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 /* Components */
 img.logo {
   margin-right: 10px;
